added more data processing

--- a/GenrePredictingNN.ipynb
+++ b/GenrePredictingNN.ipynb
@@ -604,17 +604,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "from keras_self_attention import SeqSelfAttention"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import keras\n",
+    "from keras_self_attention import SeqSelfAttention\n",
+    "\n",
+    "class AudioLSTMModel():\n",
+    "    def __init__(self, num_lstm_layers, LSTM_hidden_state_dim, num_time_frames, num_freq_bins, num_genres, lyrics_embedding_dimension, use_attention):\n",
+    "        \n",
+    "        self.num_time_frames = num_time_frames\n",
+    "\n",
+    "        self.chroma_input = Input(shape=(num_frames, num_freq_bins))\n",
+    "        self.mfcc_input = Input(shape=(num_frames, num_freq_bins))\n",
+    "        self.lyrics_embedding_input = Input(shape=(embedding_dimension,))\n",
+    "        self.use_attention = use_attention\n",
+    "        \n",
+    "        \n",
+    "        # chroma LSTM and attention\n",
+    "        chroma = keras.layers.LSTM(units=LSTM_hidden_state_dim, return_state=True, input_shape=(self.num_frames, self.num_freq_bins))(self.chroma_input)\n",
+    "        for _ in range(num_lstm_layers - 1):\n",
+    "            chroma = keras.layers.LSTM(units=LSTM_hidden_state_dim, return_state=True)(chroma)\n",
+    "        \n",
+    "        if self.use_attention:\n",
+    "            chroma = SeqSelfAttention(attention_type=SeqSelfAttention.ATTENTION_TYPE_MUL, name='AttentionChroma')(chroma)\n",
+    "        \n",
+    "        # MFCC LSTM and attetion\n",
+    "        mfcc = keras.layers.LSTM(units=LSTM_hidden_state_dim, return_state=True, input_shape=(self.num_frames, self.num_freq_bins))(self.mfcc_input)\n",
+    "        for _ in range(num_lstm_layers - 1):\n",
+    "            mfcc = keras.layers.LSTM(units=LSTM_hidden_state_dim, return_state=True)(mfcc)\n",
+    "        \n",
+    "        if self.use_attention:\n",
+    "            mfcc = SeqSelfAttention(attention_type=SeqSelfAttention.ATTENTION_TYPE_MUL, name='AttentionMFCC')(mfcc)\n",
+    "                \n",
+    "        \n",
+    "        # concatinating the mfcc chroma and embedding features\n",
+    "        x = concatenate([mfcc, chroma, self.embedding_input])\n",
+    "\n",
+    "        # putting the features through a couple fcnn. \n",
+    "        x = Dense(2048, activation='relu')(x)\n",
+    "        x = Dense(2048, activation='relu')(x)\n",
+    "        \n",
+    "        # the embedding vector for each song. \n",
+    "        latent_embedding = Dense(50, activation='relu', name='embedding')(x)\n",
+    "        genre = Dense(num_genres, activation='softmax')(latent_embedding)\n",
+    "        self.net = Model(inputs=[self.chroma_input, self.mfcc_input, self.embedding_input], outputs=genre)\n",
+    "        self.embedding = Model(self.net.input, outputs=self.net.get_layer('embedding').output)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_tensorflow_p36)",
+   "display_name": "music-182-3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "music-182-3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -626,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
