--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -3618,9 +3618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "music-cs182",
    "language": "python",
-   "name": "python2"
+   "name": "music-cs182"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3632,7 +3632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
