--- a/tSNE.ipynb
+++ b/tSNE.ipynb
@@ -7106,9 +7106,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "music3",
+   "display_name": "music-182-3",
    "language": "python",
-   "name": "music3"
+   "name": "music-182-3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
